# hermesMy

./: .gitignore  LICENSE  README.md  article_csdn.md  article_v2ex.md  build_all.bat  build_cleanmaster.bat  build_fileorganizer.bat  build_imagebatch.bat  build_pdfmaster.bat  build_toolbox.bat  marketing.md  push_via_api.py
.github/: FUNDING.yml
AudioTools/: README.md  main.py  pyproject.toml
AutomationTool/: README.md  main.py  pyproject.toml  test_app.py
AutomationTool/app/: __init__.py  main_window.py  styles.py
AutomationTool/app/modules/: __init__.py  auto_clicker.py  batch_rename.py  file_watcher.py  hotkey_manager.py  macro_recorder.py  task_scheduler.py  text_expander.py  workflow_builder.py
BackupTool/: README.md  main.py  pyproject.toml
BatteryMonitor/: README.md  main.py  pyproject.toml
CleanMaster/: README.md  main.py  pyproject.toml
CleanMaster/CleanMaster/: __init__.py
CleanMaster/CleanMaster/core/: scanner.py
CleanMaster/CleanMaster/ui/: main_window.py
ClipboardHistory/: README.md  main.py  pyproject.toml
ClipboardManager/: README.md  main.py  pyproject.toml
ClipboardSync/: README.md  main.py  pyproject.toml
ColorPalette/: README.md  main.py  pyproject.toml
ColorPicker/: README.md  main.py  pyproject.toml
CryptoTools/: README.md  main.py  pyproject.toml  requirements.txt  run.bat
DiskAnalyzer/: README.md  main.py  pyproject.toml
DiskBenchmark/: README.md  main.py  pyproject.toml
DiskCleanup/: README.md  main.py  pyproject.toml
DiskSpaceAnalyzer/: README.md  main.py  pyproject.toml
DownloadManager/: README.md  main.py  pyproject.toml
EmojiPicker/: README.md  main.py  pyproject.toml
FileConverter/: README.md  main.py  pyproject.toml
FileOrganizer/: README.md  main.py  pyproject.toml
FileOrganizer/app/: __init__.py  organizer.py  styles.py  ui.py  workers.py
FontManager/: README.md  main.py  pyproject.toml
GIFMaker/: README.md  main.py  pyproject.toml
ImageBatch/: README.md  main.py  pyproject.toml
MarkdownEditor/: README.md  main.py  pyproject.toml
NetTools/: README.md  main.py  pyproject.toml
NetworkMonitor/: README.md  main.py  pyproject.toml
PDFMaster/: README.md  main.py  pyproject.toml
PasswordManager/: README.md  main.py  pyproject.toml
PomodoroTimer/: README.md  main.py  pomodoro.db  pyproject.toml
ProcessManager/: README.md  main.py  pyproject.toml  test_smoke.py
QRCodeTool/: README.md  main.py  pyproject.toml
QRCodeTool/core/: history_manager.py  qr_generator.py  qr_scanner.py
QRCodeTool/resources/styles/: theme.qss
QRCodeTool/ui/: batch_tab.py  generate_tab.py  history_tab.py  main_window.py  scan_tab.py
QuickNote/: README.md  main.py  pyproject.toml
RegexTester/: README.md  main.py  pyproject.toml
ScreenMagnifier/: README.md  main.py  pyproject.toml
ScreenRecorder/: .gitignore  LICENSE  README.md  main.py  pyproject.toml  start.bat  test_app.py
ScreenRecorder/src/: __init__.py
ScreenRecorder/src/screen_recorder/: __init__.py  annotation_widget.py  hotkey_manager.py  main.py  main_window.py  recorder_engine.py  region_selector.py  webcam_widget.py
ScreenshotTool/: README.md  main.py  pyproject.toml
SysMonitor/: README.md  main.py  pyproject.toml
SystemCleaner/: README.md  main.py  pyproject.toml
SystemInfo/: README.md  main.py  pyproject.toml
TextEditor/: README.md  main.py  pyproject.toml
TextToSpeech/: README.md  main.py  pyproject.toml
TextTools/: README.md  main.py  pyproject.toml
TimerTools/: README.md  main.py  pyproject.toml
ToolBox/: README.md  main.py
Translator/: README.md  main.py  pyproject.toml
UnitConverter/: README.md  main.py  pyproject.toml
VideoTools/: README.md  main.py  pyproject.toml
WeatherApp/: README.md  main.py  pyproject.toml
WebScraper/: README.md  main.py  pyproject.toml
WiFiTools/: README.md  main.py  pyproject.toml
docs/: index.html
profile/: README.md
