[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "automation-tool"
version = "1.0.0"
description = "专业桌面自动化工具 - 集成宏录制、任务调度、文件监控等功能"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AutomationTool Team"}
]
keywords = ["automation", "pyqt6", "desktop", "macro", "scheduler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt6>=6.5.0",
    "psutil>=5.9.0",
]

[project.gui-scripts]
automation-tool = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
