[project]
name = "BatteryMonitor"
version = "1.0.0"
description = "Windows 电池监控工具 - 实时监控电池状态、健康、功耗等"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hermes Agent"}
]
dependencies = [
    "PyQt6>=6.5.0",
    "psutil>=5.9.0",
]

[project.gui-scripts]
battery-monitor = "main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
