[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colorpalette"
version = "1.0.0"
description = "智能配色方案生成器 - AI 配色、图片提取、色彩和谐、趋势配色、多格式导出"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nous Research" }]
keywords = ["color", "palette", "design", "pyqt6", "配色", "色彩"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "PyQt6>=6.5.0",
    "Pillow>=10.0.0",
]

[project.scripts]
colorpalette = "main:main"

[project.gui-scripts]
colorpalette-gui = "main:main"
