[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CryptoTools"
version = "1.0.0"
description = "加密工具箱 - 功能齐全的加密工具桌面应用程序"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "CryptoTools Team"}
]
keywords = ["cryptography", "encryption", "security", "tools", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "PyQt6>=6.4.0",
    "cryptography>=41.0.0",
    "PyJWT>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/cryptotools/cryptotools"
Repository = "https://github.com/cryptotools/cryptotools"
Issues = "https://github.com/cryptotools/cryptotools/issues"

[project.scripts]
cryptotools = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
