[project]
name = "fileconverter"
version = "1.0.0"
description = "通用文件格式转换器 - 支持图片、文档、音频、视频、压缩包转换"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "FileConverter Team"}
]

dependencies = [
    "PyQt6>=6.5.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
audio = ["pydub>=0.25.1"]
video = ["moviepy>=1.0.3"]
document = ["python-docx>=0.8.11", "pypdf>=3.0.0", "reportlab>=3.6.0"]
archive = ["py7zr>=0.20.0", "rarfile>=4.0"]
all = [
    "pydub>=0.25.1",
    "moviepy>=1.0.3",
    "python-docx>=0.8.11",
    "pypdf>=3.0.0",
    "reportlab>=3.6.0",
    "py7zr>=0.20.0",
    "rarfile>=4.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
