[project]
name = "NetworkMonitor"
version = "1.0.0"
description = "网络监控工具 - 实时监控网络速度、流量和连接状态"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NetworkMonitor Team"}
]
dependencies = [
    "PyQt6>=6.5.0",
    "psutil>=5.9.0",
]

[project.scripts]
networkmonitor = "main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools]
py-modules = ["main"]
