[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "ProcessManager"
version = "1.0.0"
description = "高级进程管理器 - Advanced Process Manager for Windows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ProcessManager Team" }
]

dependencies = [
    "PyQt6>=6.4.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
