[project]
name = "quicknote"
version = "1.0.0"
description = "QuickNote - 轻量级Markdown笔记应用"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "QuickNote Team"}
]
keywords = ["note", "markdown", "editor", "desktop", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Editors",
    "Topic :: Office/Business",
]

dependencies = [
    "PyQt6>=6.4.0",
    "markdown>=3.4.0",
    "Pygments>=2.14.0",
]

[project.optional-dependencies]
pdf = ["reportlab>=4.0.0"]
dev = ["pytest>=7.0.0", "pytest-qt>=4.0.0"]

[project.scripts]
quicknote = "main:main"

[build-system]
requires = ["setuptools>=65.0.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["tests*"]
