[project]
name = "regex-tester"
version = "1.0.0"
description = "专业的正则表达式测试工具 - PyQt6桌面应用"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hermes Agent"}
]
keywords = ["regex", "regular-expression", "tester", "pyqt6"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "PyQt6>=6.5.0",
]

[project.scripts]
regex-tester = "main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
