[project]
name = "screen-magnifier"
version = "1.0.0"
description = "屏幕放大镜工具 - 支持放大、取色、标尺、十字线、网格、截图等功能"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ScreenMagnifier Team"}
]
dependencies = [
    "PyQt6>=6.5.0",
    "Pillow>=10.0.0",
    "pynput>=1.7.6",
]

[project.scripts]
screen-magnifier = "main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
