[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "screen-recorder"
version = "1.0.0"
description = "专业级屏幕录制工具 - 支持全屏、区域、窗口录制，音频录制，摄像头叠加，标注功能"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ScreenRecorder Team"}
]
keywords = ["screen", "recorder", "capture", "video", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "PyQt6>=6.5.0",
    "Pillow>=10.0.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "numpy>=1.24.0",
    "mss>=9.0.0",
    "pynput>=1.7.6",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
screen-recorder = "screen_recorder.main:main"

[project.gui-scripts]
ScreenRecorder = "screen_recorder.main:main"

[tool.setuptools.packages.find]
where = ["src"]
